--- a/index.html
+++ b/index.html
@@ -1,122 +1,124 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>Wasserkraftwerke – Karte</title>
+  <meta charset="UTF-8">
+  <title>Wasserkraftwerke Karte</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+4/6ZOGP6Pgn7ab0H0Uo+gRzPgh2YtGEn9Mxo3k1w="
+    crossorigin=""
+  />
 
-<link rel="stylesheet"
-      href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css">
-<link rel="stylesheet"
-      href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css">
+  <!-- MarkerCluster CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css"
+  />
 
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-
-  #container {
-    display: flex;
-    height: 100vh;
-  }
-
-  #sidebar {
-    width: 320px;
-    overflow-y: auto;
-    border-right: 1px solid #ccc;
-    padding: 10px;
-    background: #f7f7f7;
-  }
-
-  #map {
-    flex: 1;
-  }
-
-  .entry {
-    margin-bottom: 10px;
-    padding: 8px;
-    background: white;
-    border: 1px solid #ddd;
-  }
-
-  .entry b {
-    display: block;
-  }
-</style>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      height: 100vh;
+    }
+    #map {
+      flex: 1;
+    }
+    #sidebar {
+      width: 300px;
+      overflow-y: auto;
+      background: #f4f4f4;
+      padding: 10px;
+    }
+    #sidebar h2 {
+      margin-top: 0;
+    }
+    .entry {
+      margin-bottom: 8px;
+      padding: 4px;
+      border-bottom: 1px solid #ccc;
+      cursor: pointer;
+    }
+    .entry:hover {
+      background-color: #ddd;
+    }
+  </style>
 </head>
-
 <body>
-<div id="container">
   <div id="sidebar">
-    <h3>Ohne Koordinaten</h3>
-    <div id="noCoords"></div>
+    <h2>Anlagen ohne Koordinaten</h2>
+    <div id="no-coords"></div>
   </div>
   <div id="map"></div>
-</div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+  <!-- Leaflet JS -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-o9N1j7r87mJf3nZSU+6aAlqfENZ1hw5Yf5GIbMt0xGc="
+    crossorigin=""
+  ></script>
 
-<script>
-  const map = L.map("map").setView([51.0, 10.0], 6);
+  <!-- MarkerCluster JS -->
+  <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 
-  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-    attribution: "© OpenStreetMap"
-  }).addTo(map);
+  <script>
+    // Karte erstellen
+    const map = L.map("map").setView([51.0, 10.0], 6);
 
-  const cluster = L.markerClusterGroup();
-  const sidebar = document.getElementById("noCoords");
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "© OpenStreetMap"
+    }).addTo(map);
 
-  fetch("Stromerzeuger.json")
-    .then(res => res.json())
-    .then(data => {
+    const cluster = L.markerClusterGroup();
+    const noCoordsContainer = document.getElementById("no-coords");
 
-      data.forEach(anlage => {
+    // JSON laden
+    fetch("Stromerzeuger.json")
+      .then(r => r.json())
+      .then(data => {
+        data.forEach(anlage => {
+          let lat = anlage[19];
+          let lon = anlage[20];
 
-        const name = anlage[1];
-        const status = anlage[2];
-        const leistung = anlage[4];
-        const plz = anlage[10];
-        const ort = anlage[11];
+          if (lat && lon) {
+            lat = lat.toString().replace(",", ".").trim();
+            lon = lon.toString().replace(",", ".").trim();
 
-        let lat = anlage[19];
-        let lon = anlage[20];
+            const latNum = parseFloat(lat);
+            const lonNum = parseFloat(lon);
 
-        // Komma → Punkt
-        if (lat) lat = lat.replace(",", ".");
-        if (lon) lon = lon.replace(",", ".");
+            if (!isNaN(latNum) && !isNaN(lonNum)) {
+              const marker = L.marker([latNum, lonNum]);
+              marker.bindPopup(`<b>${anlage[1]}</b><br>${anlage[11]}`);
+              cluster.addLayer(marker);
+            } else {
+              // ungültige Koordinaten → Seitenleiste
+              const div = document.createElement("div");
+              div.className = "entry";
+              div.textContent = `${anlage[1]} – ${anlage[11]}`;
+              noCoordsContainer.appendChild(div);
+            }
+          } else {
+            // keine Koordinaten → Seitenleiste
+            const div = document.createElement("div");
+            div.className = "entry";
+            div.textContent = `${anlage[1]} – ${anlage[11]}`;
+            noCoordsContainer.appendChild(div);
+          }
+        });
 
-        if (lat && lon) {
-          const marker = L.marker([parseFloat(lat), parseFloat(lon)]);
-
-          marker.bindPopup(`
-            <b>${name}</b><br>
-            Status: ${status}<br>
-            Leistung: ${leistung} kW<br>
-            Ort: ${plz} ${ort}
-          `);
-
-          cluster.addLayer(marker);
-
-        } else {
-          // Eintrag für Seitenleiste
-          const div = document.createElement("div");
-          div.className = "entry";
-          div.innerHTML = `
-            <b>${name}</b>
-            ${status}<br>
-            ${plz || ""} ${ort || ""}
-          `;
-          sidebar.appendChild(div);
-        }
-
-      });
-
-      map.addLayer(cluster);
-    });
-</script>
+        map.addLayer(cluster);
+      })
+      .catch(err => console.error("Fehler beim Laden der JSON:", err));
+  </script>
 </body>
 </html>
