--- a/index.html
+++ b/index.html
@@ -24,30 +24,41 @@
   />
 
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      height: 100vh;
+      padding: 0;
+      height: 100%;
     }
+
+    body {
+      display: flex;
+      font-family: Arial, sans-serif;
+      height: 100%;
+    }
+
     #map {
       flex: 1;
+      min-height: 100vh; /* wichtig für iPad/Safari */
     }
+
     #sidebar {
       width: 300px;
       overflow-y: auto;
       background: #f4f4f4;
       padding: 10px;
     }
+
     #sidebar h2 {
       margin-top: 0;
     }
+
     .entry {
       margin-bottom: 8px;
       padding: 4px;
       border-bottom: 1px solid #ccc;
       cursor: pointer;
     }
+
     .entry:hover {
       background-color: #ddd;
     }
@@ -81,6 +92,14 @@
     const cluster = L.markerClusterGroup();
     const noCoordsContainer = document.getElementById("no-coords");
 
+    // Hilfsfunktion für Einträge ohne Koordinaten
+    function addNoCoords(anlage) {
+      const div = document.createElement("div");
+      div.className = "entry";
+      div.textContent = `${anlage[1] || "Unbekannte Anlage"} – ${anlage[11] || ""}`;
+      noCoordsContainer.appendChild(div);
+    }
+
     // JSON laden
     fetch("Stromerzeuger.json")
       .then(r => r.json())
@@ -98,27 +117,26 @@
 
             if (!isNaN(latNum) && !isNaN(lonNum)) {
               const marker = L.marker([latNum, lonNum]);
-              marker.bindPopup(`<b>${anlage[1]}</b><br>${anlage[11]}`);
+              const name = anlage[1] || "Unbekannte Anlage";
+              const ort = anlage[11] || "";
+              marker.bindPopup(`<b>${name}</b><br>${ort}`);
               cluster.addLayer(marker);
             } else {
-              // ungültige Koordinaten → Seitenleiste
-              const div = document.createElement("div");
-              div.className = "entry";
-              div.textContent = `${anlage[1]} – ${anlage[11]}`;
-              noCoordsContainer.appendChild(div);
+              addNoCoords(anlage);
             }
           } else {
-            // keine Koordinaten → Seitenleiste
-            const div = document.createElement("div");
-            div.className = "entry";
-            div.textContent = `${anlage[1]} – ${anlage[11]}`;
-            noCoordsContainer.appendChild(div);
+            addNoCoords(anlage);
           }
         });
 
         map.addLayer(cluster);
       })
-      .catch(err => console.error("Fehler beim Laden der JSON:", err));
+      .catch(err => {
+        console.error("Fehler beim Laden der JSON:", err);
+        const div = document.createElement("div");
+        div.textContent = "Fehler beim Laden der Daten!";
+        noCoordsContainer.appendChild(div);
+      });
   </script>
 </body>
 </html>
